--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div  id="registration" class="main_div"> <!-- main-menu   / removed-->
+<!-- <div  id="registration" class="main_div"> 
 	<section>
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
@@ -31,9 +31,9 @@
 
 								<span class= "" ng-show="sign.$error.email">This email format is invalid!</span>
 								<div class= "" ng-messages="sign.email.$error" >
-											<!-- {{flag}} -->
+								 -->			<!-- {{flag}} -->
 
-									<span ng-message="validationError">user already exsist!</span>
+						<!-- 			<span ng-message="validationError">user already exsist!</span>
 								</div>
 							</div>
 							<div class="form-group ">
@@ -59,4 +59,22 @@
 		<footer></footer>
 	</section>
 </div>
+
+ -->
+
+
+
+
+
+
+
+
+
+
+<div >
+  <input type="text" [(ngModel)]="regText" value={{regText}}/>
+  <button class="btn btn-primary" (click)="addRegister()">Submit</button>
+</div>
+
+
 
