--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -71,9 +71,72 @@
 
 
 
-<div >
+<!-- <div >
   <input type="text" [(ngModel)]="regText" value={{regText}}/>
   <button class="btn btn-primary" (click)="addRegister()">Submit</button>
+</div> -->
+
+
+ <div  id="registration" class="main_div"> 
+	<section>
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<p class="navbar-brand" id="todo"></p>
+				</div>
+			</div>
+		</nav>
+	</section>
+	<section>		
+	<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-4"></div>
+				<div class="col-sm-4">
+					<h2 class="h2"> REGISTER</h2>
+					<br>
+					<br>
+					<div >
+						<form style="background-color: #ffffff" >
+							<div class="form-group ">
+								<label class="lbsty">Sign Up For a new Account</label>
+							</div>
+							<div class="form-group ">
+								<label></label>
+								<input type="text" class="form-control" placeholder="Enter name"  name="name" [(ngModel)]="name" value={{name}}>
+							</div>	
+							<div class="form-group ">
+								<label ></label>
+								<input type="email" class="form-control" placeholder="email" name="email" [(ngModel)]="email" value="{{email}}" required="" >
+
+								<span class= "" ng-show="sign.$error.email">This email format is invalid!</span>
+								<div class= "" ng-messages="sign.email.$error" >
+								 			<!-- {{flag}} -->
+
+						 			<span ng-message="validationError">user already exsist!</span>
+								</div>
+							</div>
+							<div class="form-group ">
+								<label></label>
+								<input type="password" class="form-control" placeholder="password" name="password" [(ngModel)]="password" value={{password}}>
+							</div>
+							<p ng-bind-html="erormessage" > </p>
+							<button type="submit" class="bt" (click)="addRegister()" >Sign UP</button>
+						</form>
+					</div>
+					<div class="" >
+						<p class="pstyle">
+							<label class="label_style" >already have an account ?</label>
+							<a  class="href_signin" routerLink="/"> Sign In</a> 
+						</p>
+					</div>
+				</div>
+				<br>
+				<br><br><br><br><br>
+				<div class="col-sm-4"></div>	
+			</div>
+		</div>
+		<footer></footer>
+	</section>
 </div>
 
 
