for form validation

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,8 @@
-
-
-<div> 
+<div > 
   <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <p class="navbar-brand" id="welcome">Welcome : {{username}}</p>
+          <p class="navbar-brand" id="welcome">Welcome : {{name}}</p>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li id="logout"><a href="" routerLink='/'> Logout</a></li>
@@ -12,57 +10,53 @@
       </div>
     </nav>
 	<div class="dashboard">
-		<div class="" id="dash" >
-		    <form class='input-form' name="todoform" >
+		<div class="" id="dash" >		    
 		      <div class="row ">
-		      <div class="col-xs-3 col-md-3"></div>
+		      <div class="col-xs-3 col-md-3"></div>		        		      
 		        <div class="col-xs-6 col-md-6">
-
-		          <div class="input">
-		            
+		            <form class='input-form' name="todoform"  >         
 		            <h5>Task Name :</h5>
 		            <input type="text" id="todo" class="form-control" name ="taskname" 
 		            [(ngModel)]="taskname" value={{taskname}} placeholder="Add task" required >
-
 		            <h5>Description :</h5>
 		            <input type="text" id="todoDes" class="form-control" name ="description"
-		             [(ngModel)]="description" value={{description}}  placeholder="Description"  >
-		            
+		             [(ngModel)]="description" value={{description}}  placeholder="Description" required >
 		            <h5>Date :</h5>
 		            <input type="date" class="form-control" name ="date" 
 		            [(ngModel)]="date" value={{date}} required >
-		  			
-
 		  			  <div  id="buttn">
-						  <button class="btn btn-outline-primary btn-block" type="submit" (click)="addTodo()"  >ADD TODO</button>
+						  <input type="submit" name="" class="btn btn-outline-primary btn-block" type="submit" (click)="addTodo()"  value="ADD TODO" >
 						   <!-- <button class="btn btn-outline-primary btn-block" >EDIT TODO</button> -->
-					  </div>      
-
-					  <hr>     
-								<!-- adding to do -->
+					  </div>      					  	
+					  <hr>
 <!-- ======================================================================================= -->			
-		              <div id="search" class="input ">
-					      <input type="text" class="form-control" placeholder="Search " name ="search" >
-					      <span class="input-group-btn">
-					        
-					      </span>
-					  </div>
-		          </div>
+		   
+					  </form>		         
 		        </div>
+		    
 		        <div class="col-xs-3 col-md-3"></div>
-		      </div>
-		    <div class="table-responsive col-xs-12 col-md-12">      
+		      </div>		    
+		    <div class="table-responsive col-xs-12 col-md-12">  
 
+		    <form> 
+
+
+		               <div id="search" class="input ">
+		<input type="text" class="form-control" placeholder="Search by task name " name ="search"  [(ngModel)]="filter" >
+					      <span class="input-group-btn">					        
+					      </span>
+					  </div>   
 			  <table class="table">
 			    <thead>
-			      <tr>  
-			        <th>Task 
-				        <a ng-click='sorting()'>
+			      <tr >  
+			        <th >taskname 
+
+				         <a (click)="sort('taskname')" >
 		          			<span class="glyphicon glyphicon-chevron-up"></span>
 		        		</a>
-		        		<a ng-click='revSorting()'>
+		        		<a (click)="sort('taskname')">
 		          			<span class="glyphicon glyphicon-chevron-down"></span>
-		        		</a>
+		        		</a> 
 		        	</th>
 			        <th>Description</th>
 			        <th>Date</th>
@@ -71,7 +65,7 @@
 			        <th>Delete</th>
 			      </tr>
 			    </thead>
-			    <tbody *ngFor="let todo of dashboardService.getTodos()">
+			    <tbody *ngFor="let todo of dashboardService.getTodos() | orderBy: key : reverse | filter:filter ; let taskname = index ">
 			      <tr>
 			        <td>
 			          <div >
@@ -81,6 +75,7 @@
 			        <td>
 			          <div >
 			            <span >{{todo.description}}</span>
+			           <!--  <label (click)="removeTodo()" >del</label> -->
 			          </div>
 			        </td>
 			        <td>
@@ -92,8 +87,8 @@
 			        <td>
 			          <div >
 			          <span class="pull-center">
-			              <button class="btn btn-default btn-xs" >
-			                <span class="glyphicon glyphicon-pencil" ></span>
+			              <button  (click)="updateTodo(todo.id)" class="btn btn-default btn-xs" >
+			                <span  class="glyphicon glyphicon-pencil" ></span>
 			              </button>
 			          </span>
 			          </div>
@@ -101,18 +96,22 @@
 			        <td>
 			          <div >
 			          <span class="pull-center">
-			            <button class="btn btn-danger btn-xs" >
+			          	 
+			            <button (click)="removeTodo(todo.id)" class="btn btn-danger btn-xs" >
 			              <span class="glyphicon glyphicon-remove" >
 			              </span>
 			            </button>
+			            
+			           
 			          </span>
 			          </div>
 			        </td>
 			      </tr>
 			    </tbody>
 			  </table> 
+			    </form>
 		  	</div>
-		  </form>
+		
 	 </div>
 	</div>
 </div>
