--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,16 +20,16 @@
 						<form style="background-color: #ffffff" name="loginForm"  >
 							<div class="form-group ">
 								<label ></label>
-								<input type="text" class="form-control" placeholder="Enter email" name="email"  id="exampleInputEmail1" required [(ngModel)]="email" value={{email}} >
+								<input type="email" class="form-control" placeholder="Enter email" name="email"  id="exampleInputEmail1" required [(ngModel)]="email" value={{email}} >
 							</div>
 							<div class="form-group ">
 								<label></label>
-								<input type="text" class="form-control" placeholder="Enter password" name="password"
+								<input type="password" class="form-control" placeholder="Enter password" name="password"
 								[(ngModel)]="password" value={{password}} id="exampleInputPassword1" required>
 							</div>
 
 							<div class= "mError" ng-messages="loginForm.email.$error" >
-								<span ng-message="validationError">password and email are incorrect</span>
+								<!-- <span ng-message="validationError">password and email are incorrect</span> -->
 							</div>
 
 							<button type="submit"  class="bt" (click)="logincheck()"  >Sign In</button>
