--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,15 +1,17 @@
-<!-- <div  id="registration" class="main_div"> 
+
+
+<div  id="registration" class="main_div"> 
 	<section>
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<p class="navbar-brand" id="todo"></p>
+					<p class="navbar-brand" style="color: white" id="todo"> Angular APP</p>
 				</div>
 			</div>
 		</nav>
 	</section>
 	<section>		
-	<div class="container-fluid">
+		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-4"></div>
 				<div class="col-sm-4">
@@ -17,127 +19,82 @@
 					<br>
 					<br>
 					<div >
-						<form style="background-color: #ffffff" name="sign" ng-submit="addData(user,sign)">
-							<div class="form-group ">
+						<form style="background-color: #ffffff" (ngSubmit)="submit()">
+							<div class="form-group has-feedback"  [ngClass]="{ 'has-error' : !NameControl.valid && submitAttempt }">
 								<label class="lbsty">Sign Up For a new Account</label>
 							</div>
-							<div class="form-group ">
+							<div class="form-group has-feedback">
 								<label></label>
-								<input type="text" class="form-control" placeholder="Enter name"  name="name" ng-model="name">
+								<input type="text" class="form-control" placeholder="Enter name"  name="name" [(ngModel)]="name" value={{name}} required
+								[(ngModel)]="name" #NameControl="ngModel" 
+								>
+								<span *ngIf="!NameControl.valid && submitAttempt"
+								class="glyphicon glyphicon-remove form-control-feedback" ></span>
 							</div>	
-							<div class="form-group ">
+						<!-- 	<div class="form-group has-feedback" [ngClass]="{ 'has-error' : !emailControl.valid && submitAttempt }">
 								<label ></label>
-								<input type="email" class="form-control" placeholder="email" name="email" ng-model="email" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+								<input type="email" class="form-control " placeholder="email" name="email" [(ngModel)]="email" value="{{email}}" required   [(ngModel)]="email" #emailControl="ngModel" >
 
-								<span class= "" ng-show="sign.$error.email">This email format is invalid!</span>
-								<div class= "" ng-messages="sign.email.$error" >
-								 -->			<!-- {{flag}} -->
-
-						<!-- 			<span ng-message="validationError">user already exsist!</span>
-								</div>
+								
 							</div>
-							<div class="form-group ">
-								<label></label>
-								<input type="password" class="form-control" placeholder="password" name="password" ng-model="password" id="exampleInputPassword1">
-							</div>
-							<p ng-bind-html="erormessage" > </p>
-							<button type="submit" class="bt" >Sign UP</button>
-						</form>
-					</div>
-					<div class="" >
-						<p class="pstyle">
-							<label class="label_style" >already have an account ?</label>
-							<a  class="href_signin" routerLink="/"> Sign In</a> 
-						</p>
-					</div>
-				</div>
-				<br>
-				<br><br><br><br><br>
-				<div class="col-sm-4"></div>	
-			</div>
-		</div>
-		<footer></footer>
-	</section>
-</div>
-
  -->
 
+							<div class="form-group has-feedback" 
+							[ngClass]="{ 'has-error' : !emailControl.valid && submitAttempt }">
 
-
-
-
-
-
-
-
-
-<!-- <div >
-  <input type="text" [(ngModel)]="regText" value={{regText}}/>
-  <button class="btn btn-primary" (click)="addRegister()">Submit</button>
-</div> -->
-
-
- <div  id="registration" class="main_div"> 
-	<section>
-		<nav class="navbar navbar-inverse">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<p class="navbar-brand" id="todo"></p>
+							<input type="text" class="form-control"
+							name="email" [(ngModel)]="email" #emailControl="ngModel" required placeholder="email">
+							<span *ngIf="!emailControl.valid && submitAttempt"
+							class="glyphicon glyphicon-remove form-control-feedback" ></span>
+						</div>
+						<div class="form-group ">
+							<label></label>
+							<input type="password" class="form-control" placeholder="password" name="password" [(ngModel)]="password" value={{password}} required>
+						</div>
+						<p ng-bind-html="erormessage" > </p>
+						<button type="submit" class="bt" (click)="addRegister()" >Sign UP</button>
+					</form>
+				</div>
+				<div class="" >
+					<p class="pstyle">
+						<label class="label_style" >already have an account ?</label>
+						<a  class="href_signin" routerLink="/"> Sign In</a> 
+					</p>
 				</div>
 			</div>
-		</nav>
-	</section>
-	<section>		
-	<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-4"></div>
-				<div class="col-sm-4">
-					<h2 class="h2"> REGISTER</h2>
-					<br>
-					<br>
-					<div >
-						<form style="background-color: #ffffff" >
-							<div class="form-group ">
-								<label class="lbsty">Sign Up For a new Account</label>
-							</div>
-							<div class="form-group ">
-								<label></label>
-								<input type="text" class="form-control" placeholder="Enter name"  name="name" [(ngModel)]="name" value={{name}}>
-							</div>	
-							<div class="form-group ">
-								<label ></label>
-								<input type="email" class="form-control" placeholder="email" name="email" [(ngModel)]="email" value="{{email}}" required="" >
-
-								<span class= "" ng-show="sign.$error.email">This email format is invalid!</span>
-								<div class= "" ng-messages="sign.email.$error" >
-								 			<!-- {{flag}} -->
-
-						 			<span ng-message="validationError">user already exsist!</span>
-								</div>
-							</div>
-							<div class="form-group ">
-								<label></label>
-								<input type="password" class="form-control" placeholder="password" name="password" [(ngModel)]="password" value={{password}}>
-							</div>
-							<p ng-bind-html="erormessage" > </p>
-							<button type="submit" class="bt" (click)="addRegister()" >Sign UP</button>
-						</form>
-					</div>
-					<div class="" >
-						<p class="pstyle">
-							<label class="label_style" >already have an account ?</label>
-							<a  class="href_signin" routerLink="/"> Sign In</a> 
-						</p>
-					</div>
-				</div>
-				<br>
-				<br><br><br><br><br>
-				<div class="col-sm-4"></div>	
-			</div>
+			<br>
+			<br><br><br><br><br>
+			<div class="col-sm-4"></div>	
 		</div>
-		<footer></footer>
-	</section>
+	</div>
+	<footer></footer>
+</section>
 </div>
 
 
 
+<form (ngSubmit)="submit()" >
+	<div class="form-group has-feedback" 
+	[ngClass]="{ 'has-error' : !firstNameControl.valid && submitAttempt }">
+	<label class="control-label" >First Name</label>
+
+	<input type="text" class="form-control"
+	name="firstName" [(ngModel)]="firstName" #firstNameControl="ngModel" required >
+
+
+	<span *ngIf="!firstNameControl.valid && submitAttempt"
+	class="glyphicon glyphicon-remove form-control-feedback" ></span>
+</div>
+
+
+
+<div class="form-group has-feedback" 
+[ngClass]="{ 'has-error' : !emailControl.valid && submitAttempt }">
+<label class="control-label">E-mail</label>
+<input type="text" class="form-control"
+name="email" [(ngModel)]="email" #emailControl="ngModel" required>
+<span *ngIf="!emailControl.valid && submitAttempt"
+class="glyphicon glyphicon-remove form-control-feedback" ></span>
+</div>
+<button type="submit" class="btn btn-default" (click)=initSubmit()>Submit</button>
+</form>
