only update to local storage remaining

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,20 +1,41 @@
 <div > 
-  <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <p class="navbar-brand" id="welcome">Welcome : {{name}}</p>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li id="logout"><a href="" routerLink='/'> Logout</a></li>
-        </ul>
-      </div>
-    </nav>
+	<nav class="navbar navbar-inverse">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<p class="navbar-brand" id="welcome">Welcome : {{name}}</p>
+			</div>
+			<ul class="nav navbar-nav navbar-right">
+				<li id="logout"><a href="" routerLink='/'> Logout</a></li>
+			</ul>
+		</div>
+	</nav>
 	<div class="dashboard">
 		<div class="" id="dash" >		    
-		      <div class="row ">
-		      <div class="col-xs-3 col-md-3"></div>		        		      
-		        <div class="col-xs-6 col-md-6" >
-		            <form class='input-form' name="todoform"   >         
+			<div class="row ">
+				<div class="col-xs-3 col-md-3"></div>		        		      
+				<div class="col-xs-6 col-md-6" >
+					<form class='input-form' name="todoform" >
+
+						<input type="hidden" id="ID" class="form-control" name ="ID" 
+						[(ngModel)]="taskname"  placeholder="Add task" required [value]="ID1" >
+
+						<h5>Task Name :</h5>
+						<input type="text" id="todo" class="form-control" name ="taskname" 
+						[(ngModel)]="taskname"  placeholder="Add task" required [value]="taskname1" >
+
+						<h5>Description :</h5>
+						<input type="text" id="todoDes" class="form-control" name ="description"
+						[(ngModel)]="description"   placeholder="Description" required [value]="description1" >
+						<h5>Date :</h5>
+						<input type="date" class="form-control" name ="date" 
+						[(ngModel)]="date"  required  [value]="date1" >
+						<div  id="buttn">
+							<input type="submit" name="" class="btn btn-outline-primary btn-block" type="submit" (click)="addTodo()"  value="ADD TODO" >
+							<button type="submit" class="btn btn-outline-primary btn-block"  *ngIf="update" (click)="updateTodo(ID1)" >UPDATE TODO</button>
+						</div>      					  	
+						<hr>			
+					</form>	
+	<!-- 			     <form class='input-form' name="todoEditForm"   >         
 		            <h5>Task Name :</h5>
 		            <input type="text" id="todo" class="form-control" name ="taskname" 
 		            [(ngModel)]="taskname" value={{todo.taskname}} placeholder="Add task" required >
@@ -25,91 +46,95 @@
 		            <input type="date" class="form-control" name ="date" 
 		            [(ngModel)]="date" value={{date}} required >
 		  			  <div  id="buttn">
-						  <input type="submit" name="" class="btn btn-outline-primary btn-block" type="submit" (click)="addTodo()"  value="ADD TODO" >
+						  
 						   <button class="btn btn-outline-primary btn-block"  *ngIf="update" (click)="updateItem()" >UPDATE TODO</button>
 					  </div>      					  	
 					  <hr>			
-				  </form>		         
-		        </div>
-		    <!-- ======================================================================================= -->
-		        <div class="col-xs-3 col-md-3"></div>
-		      </div>		    
-		    <div class="table-responsive col-xs-12 col-md-12">  
-
-		    <form> 
+					</form>	 -->	
 
 
-		               <div id="search" class="input ">
-		<input type="text" class="form-control" placeholder="Search by task name " name ="search"  [(ngModel)]="filter" >
-					      <span class="input-group-btn">					        
-					      </span>
-					  </div>   
-			  <table class="table">
-			    <thead>
-			      <tr >  
-			        <th >taskname 
 
-				         <a (click)="sort('taskname')" >
-		          			<span class="glyphicon glyphicon-chevron-up"></span>
-		        		</a>
-		        		<a (click)="sort('taskname')">
-		          			<span class="glyphicon glyphicon-chevron-down"></span>
-		        		</a> 
-		        	</th>
-			        <th>Description</th>
-			        <th>Date</th>
-			      		        
-			        <th>Edit</th>
-			        <th>Delete</th>
-			      </tr>
-			    </thead>
-			    <tbody *ngFor="let todo of dashboardService.getTodos() | orderBy: key : reverse | filter:filter ; let taskname = index ">
-			      <tr>
-			        <td>
-			          <div >
-			            <span >{{todo.taskname}}</span>
-			          </div>
-			        </td>
-			        <td>
-			          <div >
-			            <span >{{todo.description}}</span>
-			           <!--  <label (click)="removeTodo()" >del</label> -->
-			          </div>
-			        </td>
-			        <td>
-			          <div >
-			            <span >{{todo.date}}</span>
-			          </div>
-			        </td>
-			        
-			        <td>
-			          <div >
-			          <span class="pull-center">
-			              <button  (click)="editTodo(todo.id)" class="btn btn-default btn-xs" >
-			                <span  class="glyphicon glyphicon-pencil" ></span>
-			              </button>
-			          </span>
-			          </div>
-			        </td>
-			        <td>
-			          <div >
-			          <span class="pull-center">
-			          	 
-			            <button (click)="removeTodo(todo.id)" class="btn btn-danger btn-xs" >
-			              <span class="glyphicon glyphicon-remove" >
-			              </span>
-			            </button>
-			            
-			           
-			          </span>
-			          </div>
-			        </td>
-			      </tr>
-			    </tbody>
-			  </table> 
-			    </form>
-		  	</div>
-		
-	 </div>
+
+				</div>
+				<!-- ======================================================================================= -->
+				<div class="col-xs-3 col-md-3"></div>
+			</div>		    
+			<div class="table-responsive col-xs-12 col-md-12">  
+
+				<form> 
+
+
+					<div id="search" class="input ">
+						<input type="text" class="form-control" placeholder="Search by task name " name ="search"  [(ngModel)]="filter" >
+						<span class="input-group-btn">					        
+						</span>
+					</div>   
+					<table class="table">
+						<thead>
+							<tr >  
+								<th >taskname 
+
+									<a (click)="sort('taskname')" >
+										<span class="glyphicon glyphicon-chevron-up"></span>
+									</a>
+									<a (click)="sort('taskname')">
+										<span class="glyphicon glyphicon-chevron-down"></span>
+									</a> 
+								</th>
+								<th>Description</th>
+								<th>Date</th>
+
+								<th>Edit</th>
+								<th>Delete</th>
+							</tr>
+						</thead>
+						<tbody *ngFor="let todo of dashboardService.getTodos() | orderBy: key : reverse | filter:filter ; let taskname = index ">
+							<tr>
+								<td>
+									<div >
+										<span >{{todo.taskname}}</span>
+									</div>
+								</td>
+								<td>
+									<div >
+										<span >{{todo.description}}</span>
+										<!--  <label (click)="removeTodo()" >del</label> -->
+									</div>
+								</td>
+								<td>
+									<div >
+										<span >{{todo.date}}</span>
+									</div>
+								</td>
+
+								<td>
+									<div >
+										<span class="pull-center">
+											<button  (click)="editTodo(todo.id)" class="btn btn-default btn-xs" >
+												<span  class="glyphicon glyphicon-pencil" ></span>
+											</button>
+										</span>
+									</div>
+								</td>
+								<td>
+									<div >
+										<span class="pull-center">
+
+											<button (click)="removeTodo(todo.id)" class="btn btn-danger btn-xs" >
+												<span class="glyphicon glyphicon-remove" >
+												</span>
+											</button>
+
+
+										</span>
+									</div>
+								</td>
+							</tr>
+						</tbody>
+					</table> 
+				</form>
+			</div>
+
+		</div>
 	</div>
 </div>
